<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="deep_ar_key">66e01bec4211ea4391b4f4c89fe288eb752b8966865e12881daefe590d2c74749cb6af1e5bd89520</string>
    <string name="app_name">Cascade OS</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="citi_bank">Citi Bank</string>
    <string name="messages">Messages</string>
    <string name="mail">Mail</string>
    <string name="paramount">Paramount</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="amazon">Amazon</string>
    <string name="bumble">Bumble</string>
    <string name="espn_score_center">ESPN</string>
    <string name="urban_spoon">Urbanspoon</string>
    <string name="yelp">Yelp</string>
    <string name="snapchat">Snapchat</string>
    <string name="linkedin">Linkedin</string>
    <string name="dropbox">Dropbox</string>
    <string name="npr_news">NPR News</string>
    <string name="web_md_mobile">Webmd Mobile</string>
    <string name="weather_channel">Weather Channel</string>
    <string name="pandora_radio">Pandora Radio</string>
    <string name="youtube">Youtube</string>
    <string name="barcode">Barcode</string>
    <string name="discovery">Discovery</string>
    <string name="phone_system">Phone System</string>
    <string name="digital_locker">Digital Locker</string>
    <string name="cool_tv">Cool Tv</string>
    <string name="setting_screen">Setting Screen</string>
    <string name="multicast_system">Multicast System</string>
    <string name="txt_cool_Ecall">CoolECall</string>
    <string name="interactive_internet">Interactive Internet</string>
    <string name="interactive_internet_n" tools:ignore="ExtraTranslation">Interactive\nInternet</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_star">*</string>
    <string name="_hash">#</string>
    <string name="_plus">+</string>
    <string name="call">Call</string>
    <string name="instagram">Instagram</string>
    <string name="permission_camera_rationale_message">This app needs access to your camera permission for video call.</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="txt_link">Link</string>
    <string name="txt_entertain">Entertain</string>
    <string name="txt_interact">Interact</string>
    <string name="txt_bid">Bid</string>
    <string name="calling">calling…</string>
    <string name="bid_name">Salvator Mundi</string>
    <string name="by_da_vinci_leonardo">By Da Vinci, Leonardo</string>
    <string name="_90_million">$90 Million</string>
    <string name="bid">Bid</string>
    <string name="size_measure">Size: 25 7/8 x 18 in. (65.7 x 45.7 cm.)</string>
    <string name="send">Send</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="txt_zoom">Zoom</string>
    <string name="txt_expedia">Expedia</string>
    <string name="txt_amazon_music">Amazon Music</string>
    <string name="txt_netflix">Netflix</string>
    <string name="coolTvNetworkTm">COOLTv™</string>
    <string name="txt_click_video_shop">ClickVideoShop</string>
    <string name="txt_itunes">Itunes</string>
    <string name="txt_uber">Uber</string>
    <string name="txt_airbnb">AirBnB</string>
    <string name="txt_cnn_news">CNN News</string>
    <string name="backward">Backward</string>
    <string name="forward">Forward</string>
    <string name="keypad">Keypad</string>
    <string name="compose_email">Compose Email</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="video_call_Texting_with">Video Call: Kate\nTexting with: Emily</string>
    <string name="video_call_Texting_with_andrea">Video Call: Andrea James\nTexting with: Emily</string>
    <string name="facebook_wall">Facebook:\nWall</string>
    <string name="shopping_games">Shopping:\nGames</string>
    <string name="locker_photos">Locker:\nPhotos</string>
    <string name="phone_jason">Phone:\nJason</string>
    <string name="game_world_of_warcraft">Game: World of Warcraft</string>
    <string name="game_angry_bird">Game: Angry Bird</string>
    <string name="texting_ben">Texting:\nBen</string>
    <string name="twitter_check">Twitter:\nCheck…</string>
    <string name="cooltv_videos">CoolTV:\nVideos</string>
    <string name="facebook_friends">Facebook:\nFriends</string>
    <string name="video_full_screen_avatar">Video: (Full Screen): Avatar</string>
    <string name="v_call_kate">V-Call:\nKate</string>
    <string name="cooltv_fashion">CoolTV:\nFashion</string>
    <string name="video_fashion">Video:\nFashion</string>
    <string name="resume">Resume</string>
    <string name="clear">Clear</string>
    <string name="cascade">Cascade</string>
    <string name="txt_video_game">Video Game</string>
    <string name="txt_contract_killer">Contract killer</string>
    <string name="txt_angry_bird">Angry bird</string>
    <string name="txt_gt_racing">GT Racing</string>
    <string name="txt_formula_1">Formula 1</string>
    <string name="txt_call_of_duty">Call of duty</string>
    <string name="txt_mine_craft">Minecraft</string>
    <string name="txt_candy_crush_saga">Candy Crush Saga</string>
    <string name="txt_grand_theft_auto">Grand Theft Auto</string>
    <string name="txt_pubg_battleground">Pubg Battleground</string>
    <string name="purchase_video">Purchase Video</string>
    <string name="purchased_videos">Purchased Videos</string>
    <string name="purchased_games">Purchased Games</string>
    <string name="purchased_audios">Purchased Audios</string>
    <string name="purchased_files">Purchased Files</string>
    <string name="purchased_photos">Purchased Photos</string>
    <string name="play_on_device">Play on Device</string>
    <string name="view_on_device">View on Device</string>
    <string name="beam_to_tv">Beam to TV</string>
    <string name="hello_thanks_for_sharing_information_we_will_connect_as_soon_as_possible">Hello \nThanks for sharing information. We will connect as soon as possible</string>
    <string name="meeting">Meeting</string>
    <string name="client_email">FranzWakefield@cooltvnetwork.com</string>
    <string name="phone_andrea">Phone:\nAndrea James</string>
    <string name="multicast_system_email">Multicast : Email</string>
    <string name="on_hold">On Hold</string>
    <string name="conference_call">Conference Call</string>
    <string name="merge_call">Merge Call</string>
    <string name="txt_google_meet">Google meet</string>
    <string name="txt_venmo">Venmo</string>
    <string name="txt_hinge">Hinge</string>
    <string name="txt_muscle_booster_workout_planner">Muscle booster workout planner</string>
    <string name="txt_google_classroom">Google classroom</string>
    <string name="txt_ebay">Ebay</string>
    <string name="txt_reddit">Reddit</string>
    <string name="txt_booking">Booking</string>
    <string name="txt_group_me">Group me</string>
    <string name="txt_tiktok">TikTok</string>
    <string name="txt_google_drive">Google drive</string>
    <string name="txt_outlook">Outlook</string>
    <string name="txt_youtube_music">Youtube music</string>
    <string name="txt_news_break">News break</string>
    <string name="txt_google_keep">Google keep</string>
    <string name="txt_blinkist">Blinkist</string>
    <string name="txt_cash_app">Cash app</string>
    <string name="txt_hbo_max">HBO max</string>
    <string name="txt_uber_eats">Uber eats</string>
    <string name="txt_disney_plus">Disney plus</string>
    <string name="txt_temu">Temu</string>
    <string name="txt_turbo_tax">Turbo tax</string>
    <string name="txt_walmart">Walmart</string>
    <string name="txt_door_dash">Door dash</string>
    <string name="txt_pinterest">Pinterest</string>
    <string name="txt_indeed">Indeed</string>
    <string name="txt_hopper">Hopper</string>
    <string name="txt_kfc">KFC</string>
    <string name="txt_chime">Chime</string>
    <string name="txt_vrbo">Vrbo</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_gallery">Gallery</string>
    <string name="_q">Q</string>
    <string name="_w">W</string>
    <string name="_e">E</string>
    <string name="_r">R</string>
    <string name="_t">T</string>
    <string name="_y">Y</string>
    <string name="_u">U</string>
    <string name="_i">I</string>
    <string name="_o">O</string>
    <string name="_p">P</string>
    <string name="_a">A</string>
    <string name="_s">S</string>
    <string name="_d">D</string>
    <string name="_f">F</string>
    <string name="_g">G</string>
    <string name="_h">H</string>
    <string name="_j">J</string>
    <string name="_k">K</string>
    <string name="_l">L</string>
    <string name="_z">Z</string>
    <string name="_x">X</string>
    <string name="_c">C</string>
    <string name="_v">V</string>
    <string name="_b">B</string>
    <string name="_n">N</string>
    <string name="_m">M</string>
    <string name="_dash">-</string>
    <string name="_colon">:</string>
    <string name="_semi_colon">;</string>
    <string name="_open_round_bracket">(</string>
    <string name="_close_round_bracket">)</string>
    <string name="_dollar">$</string>
    <string name="_and">&amp;</string>
    <string name="_at">@</string>
    <string name="_quotes">\"</string>
    <string name="_coma">,</string>
    <string name="_dot">.</string>
    <string name="_question_mark">?</string>
    <string name="_exclamation_mark">!</string>
    <string name="_single_quot">\'</string>
    <string name="_equal_to">=</string>
    <string name="_caps">caps</string>
    <string name="_return">return</string>
    <string name="key_board">KeyBoard</string>
    <string name="txt_chat_video_call">Chat Video Call</string>
    <string name="txt_remove_app_title">Are you sure you want to remove this app?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="document1">How it works</string>
    <string name="document2">Brochure</string>
    <string name="document3">COOLTV Executive Summary</string>
    <string name="document4">Mobile SmartPhone</string>
    <string name="document5">Wipo Grant</string>
    <string name="document6">CascadeSoftware Patent</string>
    <string name="document7">Certificate Registration Design</string>
    <string name="document8">China Allowance</string>
    <string name="document9">DesignReg Certificate</string>
    <string name="document10">VideoShop Patent</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_security_screen">Security</string>
    <string name="tvsecurity_status">Security Status</string>
    <string name="tv_security_find_my_device">Find my Device</string>
    <string name="tv_google_play_system_update">Google Play system update</string>
    <string name="tv_security_update">Security update</string>
    <string name="tv_device_security">Device Security</string>
    <string name="tv_screen_lock">Screen lock</string>
    <string name="tv_pin">PIN</string>
    <string name="tv_fingerprint">Fingerprint</string>
    <string name="tv_face_unlock">Face Unlock</string>
    <string name="tv_smart_lock">Smart Lock</string>
    <string name="tv_sim_card_lock">SIM card lock</string>
    <string name="tv_device_admin_apps">Device admin apps</string>
    <string name="tv_encryption_credentials"><![CDATA[Encryption & Credentials]]></string>
    <string name="tv_trust_agents">Trust agents</string>
    <string name="tv_app_pinning">App pinning</string>
</resources>