<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_12"
        tools:context=".ui.CascadeActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvVideoCall"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#9B5FE0"
                    android:text="@string/video_call_Texting_with"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6" />

                <TextView
                    android:id="@+id/tvFacebookWall"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#7827D4"
                    android:text="@string/facebook_wall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tvV_Call"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#60DBE8"
                    android:text="@string/phone_andrea"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoCall"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvCoolTvFashion"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#0EA4D6"
                    android:text="@string/cooltv_videos"
                    app:layout_constraintStart_toEndOf="@id/tvV_Call"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoCall"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvMulticastEmail"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#367BB0"
                    android:longClickable="true"
                    android:text="@string/multicast_system_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCoolTvFashion"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoCall" />

                <TextView
                    android:id="@+id/tvVideoFullScreen"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#8BD346"
                    android:text="@string/video_full_screen_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvV_Call"
                    app:layout_constraintWidth_percent="1" />

                <TextView
                    android:id="@+id/tvTextingBen"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#FFB700"
                    android:text="@string/texting_ben"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoFullScreen"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvCoolTvVideo"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#D99C00"
                    android:text="@string/cooltv_videos"
                    app:layout_constraintStart_toEndOf="@id/tvTextingBen"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoFullScreen"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvFacebookFriend"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#A77C0E"
                    android:text="@string/facebook_friends"
                    app:layout_constraintStart_toEndOf="@id/tvCoolTvVideo"
                    app:layout_constraintTop_toBottomOf="@id/tvVideoFullScreen"
                    app:layout_constraintWidth_percent="0.34" />

                <TextView
                    android:id="@+id/tvTextingBen2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#F9834F"
                    android:text="@string/texting_ben"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvCoolTvVideo2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#D64E12"
                    android:text="@string/cooltv_videos"
                    app:layout_constraintStart_toEndOf="@id/tvTextingBen2"
                    app:layout_constraintTop_toBottomOf="@id/tvCoolTvVideo"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvTwitterCheck"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#99360A"
                    android:text="@string/twitter_check"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCoolTvVideo"
                    app:layout_constraintWidth_percent="0.34" />

                <TextView
                    android:id="@+id/tvWhatsapp"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#2634B0"
                    android:text="@string/whatsapp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen2"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvGameAngryBird"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#6773DD"
                    android:text="@string/game_angry_bird"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvWhatsapp"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen2"
                    app:layout_constraintWidth_percent="0.67" />

                <TextView
                    android:id="@+id/tvGameWorldOfWarCraft"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#CD54D8"
                    android:text="@string/game_world_of_warcraft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGameAngryBird"
                    app:layout_constraintWidth_percent="1" />

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#40C0B1"
                    android:text="@string/phone_jason"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGameWorldOfWarCraft"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvLocker"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#29B0A1"
                    android:text="@string/locker_photos"
                    app:layout_constraintStart_toEndOf="@id/tvPhone"
                    app:layout_constraintTop_toBottomOf="@id/tvGameWorldOfWarCraft"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvShopping"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#27867B"
                    android:text="@string/shopping_games"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvLocker"
                    app:layout_constraintTop_toBottomOf="@id/tvGameWorldOfWarCraft"
                    app:layout_constraintWidth_percent="0.34" />

                <TextView
                    android:id="@+id/tvDigitalLocker"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#52B4FF"
                    android:text="@string/digital_locker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvShopping" />


                <TextView
                    android:id="@+id/tvTextingBen4"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#BE0E61"
                    android:text="@string/texting_ben"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDigitalLocker"
                    app:layout_constraintWidth_percent="0.67" />

                <TextView
                    android:id="@+id/tvFacebookWall2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#E3257F"
                    android:text="@string/facebook"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDigitalLocker"
                    app:layout_constraintWidth_percent="0.34" />


                <TextView
                    android:id="@+id/tvV_Call2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#82BCCF"
                    android:text="@string/v_call_kate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen4"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvCoolTvFashion2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#4D8A9E"
                    android:text="@string/cooltv_fashion"
                    app:layout_constraintStart_toEndOf="@id/tvV_Call"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen4"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tvVideoFashion2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#276983"
                    android:text="@string/video_fashion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCoolTvFashion"
                    app:layout_constraintTop_toBottomOf="@id/tvTextingBen4" />


                <TextView
                    android:id="@+id/tvVideoCall2"
                    style="@style/cascadeTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:background="#EA8902"
                    android:text="@string/video_call_Texting_with_andrea"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvV_Call2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <View
            android:id="@+id/layout_hidden_actionbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/action_bar"
            layout="@layout/activity_action_bar"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>